[gd_scene load_steps=8 format=3 uid="uid://b8cc880q1xue6"]

[ext_resource type="Script" path="res://meniusy/StartoweMenu.gd" id="1_pvf1y"]
[ext_resource type="FontFile" uid="uid://dbaodg3evongo" path="res://foncik/PixelifySans-Medium.ttf" id="2_3hx21"]
[ext_resource type="Texture2D" uid="uid://bqlql4ljl21v5" path="res://meniusy/zulix.jpg" id="2_jmb5r"]
[ext_resource type="Texture2D" uid="uid://c3wuh8o08c4jg" path="res://meniusy/butonik2.png" id="3_erpvv"]
[ext_resource type="Texture2D" uid="uid://bvpy80pqxem3n" path="res://meniusy/butonik-najech2.png" id="4_5pvth"]
[ext_resource type="AudioStream" uid="uid://rcat6rmlixjo" path="res://meniusy/pum_menu.ogg" id="6_acgal"]

[sub_resource type="LabelSettings" id="LabelSettings_on11e"]
font = ExtResource("2_3hx21")
font_size = 34

[node name="StartoweMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pvf1y")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="HSplitContainer/VSplitContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer/VSplitContainer/VBoxContainer2/TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_3hx21")
theme_override_fonts/bold_font = ExtResource("3_jduck")
theme_override_font_sizes/normal_font_size = 63
bbcode_enabled = true
text = "[center]Gaming[/center]"

[node name="TextureButton2" type="TextureButton" parent="HSplitContainer/VSplitContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer/VSplitContainer/VBoxContainer2/TextureButton2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_3hx21")
theme_override_fonts/bold_font = ExtResource("3_jduck")
theme_override_font_sizes/normal_font_size = 63
bbcode_enabled = true
text = "[center]Gaming[/center]"

[node name="TextureButton3" type="TextureButton" parent="HSplitContainer/VSplitContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer/VSplitContainer/VBoxContainer2/TextureButton3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_3hx21")
theme_override_fonts/bold_font = ExtResource("3_jduck")
theme_override_font_sizes/normal_font_size = 63
bbcode_enabled = true
text = "[center]Gaming[/center]"

[node name="TextureButton4" type="TextureButton" parent="HSplitContainer/VSplitContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer/VSplitContainer/VBoxContainer2/TextureButton4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_3hx21")
theme_override_fonts/bold_font = ExtResource("3_jduck")
theme_override_font_sizes/normal_font_size = 63
bbcode_enabled = true
text = "[center]Gaming[/center]"

[node name="Control" type="Control" parent="HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_acgal")
attenuation = 0.0

[connection signal="pressed" from="HSplitContainer/MarginContainer/VBoxContainer2/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="HSplitContainer/MarginContainer/VBoxContainer2/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="HSplitContainer/MarginContainer/VBoxContainer2/Quit" to="." method="_on_quit_pressed"]
